test/cgen/open1.kk.out
test/cgen/open1.kk(6, 5): error: types do not match
 context : i
 term : i
 inferred type: <exn|_e>
 expected type: exn